--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
-        "chart.js": "^4.3.0"
+        "chart.js": "^4.3.0",
+        "summernote": "^0.8.20"
     }
 }
